minor changes to my contact page

--- a/contact.html
+++ b/contact.html
@@ -117,6 +117,15 @@
         referrerpolicy="no-referrer-when-downgrade"
       ></iframe>
     </div>
+    <div class="connect">
+      <h1>Ready to Get Started?</h1>
+      <p>Let us help you build a website or equip you with skills to do so.</p>
+      <div>
+        <button>Request Consultation</button>
+        <button>I want to Learn</button>
+      </div>
+
+    </div>
     <footer>
       <p>&copy; Acme Web Design, Copyright © 2019</p>
     </footer>
